--- a/mqtt_dashboard/templates/index.html
+++ b/mqtt_dashboard/templates/index.html
@@ -5,14 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MIS MQTT Dashboard</title>
-    {# <link href="{{ url_for('static', path='/css/bootstrap4.1.3.min.css') }}" rel="stylesheet">
-    <link href="{{ url_for('static', path='/css/styles.css') }}" rel="stylesheet"> #}
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    
   </head>
-  <body style="text-align: center; margin: 30px;">
-    <form action="/update-device-status" method="get">
-      <button onclick="change_device_status()" type="button" style="pointer: cursor; padding: 20px; background-color: {{ 'green' if (status=='on') else 'red' }};">Status: {{ status }}</button>
-    </form>
-    <table>
+  <body>
+  <div style="margin-top: 50px;">
+  <div class="container">
+      <button style="margin-bottom: 30px;" id="ajaxButton" type="button" class="{{ 'btn btn-success' if (status=='on') else 'btn btn-danger' }}">Status: {{ status }}</button>
+    <table class="table table-bordered table-hover table-striped text-center">
       <thead>
         <tr>
           <td>Topic Name</td>
@@ -36,8 +37,38 @@
         {% endfor %}
       </tbody>
     </table>
+  </div>
+
+  
+  </div>
   </body>
   <script>
+      (function() {
+      var httpRequest;
+      document.getElementById("ajaxButton").addEventListener('click', makeRequest);
+
+      function makeRequest() {
+        httpRequest = new XMLHttpRequest();
+
+        if (!httpRequest) {
+          alert('Giving up :( Cannot create an XMLHTTP instance');
+          return false;
+        }
+        httpRequest.onreadystatechange = alertContents;
+        httpRequest.open('GET', '/update-device-status');
+        httpRequest.send();
+      }
+
+      function alertContents() {
+        if (httpRequest.readyState === XMLHttpRequest.DONE) {
+          if (httpRequest.status === 200) {
+            console.log(httpRequest.responseText);
+          } else {
+            alert('There was a problem with the request.');
+          }
+        }
+      }
+    })(); 
     setTimeout(function () {
       window.location.reload(1);
     }, 1000);
